# QasaWatch

./: .env.example  .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
deployment/systemd/: qasawatch-browser-view.service.example  qasawatch-novnc.service.example  qasawatch-openbox.service.example  qasawatch-x11vnc.service.example  qasawatch.env.example  qasawatch.service.example
docs/: CONFIGURATION.md  OPERATIONS.md
scripts/: build_stockholm_scb.py  build_sweden_scb.py
src/qasawatch/: __init__.py  app.py  browser.py  browser_host.py  cli.py  config.py  db.py  domain.py  emailer.py  enrichment.py  filters.py  models.py  outputs.py  parser.py  pipeline.py  readiness.py  redaction.py  scb.py  scheduler.py  schemas.py  secrets.py  service.py
src/qasawatch/static/: dashboard.js  style.css
src/qasawatch/templates/: dashboard.html
tests/: test_app.py  test_browser.py  test_cli_webhook.py  test_config.py  test_db.py  test_email.py  test_enrichment.py  test_filters.py  test_outputs.py  test_parser.py  test_pipeline.py  test_scb.py  test_scheduler.py  test_service.py
tests/fixtures/qasa/: auth.html  detail.html  empty.html  incomplete.html  partial.html  results.html
