[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qasawatch"
version = "0.1.0"
description = "Durable, restartable Qasa listing watcher"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "google-auth[requests]>=2.35,<3",
  "jinja2>=3.1,<4",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "tzdata>=2025.2",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
web = []
browser = ["playwright>=1.49,<2"]
test = ["pytest>=8.3,<9", "pytest-asyncio>=1.2,<2", "httpx>=0.27,<1"]

[project.scripts]
qasawatch = "qasawatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qasawatch"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
